# sdcppmu-diffuse

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  vcpkg.json
apps/: CMakeLists.txt
apps/sdl/: CMakeLists.txt  index.html  main.cpp  vcpkg.json
cmake/vcpkg/halide/: portfile.cmake  vcpkg.json
include/diffuse/: diffuse.h  export.h
packaging/: CMakeLists.txt  diffuse-config.cmake.in  diffuse-shared-deps.cmake  diffuse-static-deps.cmake
src/: CMakeLists.txt  diffuse.cpp  reaction_diffusion_generator.cpp
src/app/: CMakeLists.txt  main.cpp
src/diffuse/: reaction_diffusion_generator.cpp
test/: CMakeLists.txt  test-build.ps1  test-emscripten.sh
